[metadata]
name = cuelib
version = attr: cue.__version__
description =
author = Jan Češpivo (http://www.jancespivo.com/)"
author_email = jan.cespivo@gmail.com
license = Apache 2.0
license_file = LICENSE
url = https://github.com/basecue/cue
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude = tests

;[options.package_data]
;py.typed = py.typed

[mypy]
disallow_untyped_defs = True

[tox]
envlist = py36

[testenv:test]
deps = pytest
commands = pytest

[testenv:mypy]
deps = mypy
commands = mypy cue
